Bug 340714: nsIConverterInputStream duplicates the last character in the first buffer. r=jshin, sr=jag