intl/uconv/ucvlatin/nsUCS2BEToUnicode.cpp
@@ -41,6 +41,11 @@
 #include <string.h>
 #include "prtypes.h"
 
+#define STATE_NORMAL          0
+#define STATE_HALF_CODE_POINT 1
+#define STATE_FIRST_CALL      2
+#define STATE_FOUND_BOM       3
+
 // XXX : illegal surrogate code points are just passed through !!
 static nsresult
 UTF16ConvertToUnicode(PRUint8& aState, PRUint8& aData, const char * aSrc,
@@ -52,8 +57,12 @@ UTF16ConvertToUnicode(PRUint8& aState, PRUint8& aData, const char * aSrc,
   PRUnichar* dest = aDest;
   PRUnichar* destEnd = aDest + *aDestLength;
 
-  if(2 == aState) // first time called
+  if(STATE_FOUND_BOM == aState) // caller found a BOM
   {
+    NS_ASSERTION(*aSrcLength >= 2, "Too few bytes in input");
+    src+=2;
+    aState = STATE_NORMAL;
+  } else if(STATE_FIRST_CALL == aState) { // first time called
     NS_ASSERTION(*aSrcLength >= 2, "Too few bytes in input");
 
     // Eliminate BOM (0xFEFF). Note that different endian case is taken care of
@@ -67,12 +76,12 @@ UTF16ConvertToUnicode(PRUint8& aState, PRUint8& aData, const char * aSrc,
       *aDestLength=0;
       return NS_ERROR_ILLEGAL_INPUT;
     }  
-    aState=0;
+    aState = STATE_NORMAL;
   }
 
   PRInt32 copybytes;
 
-  if((1 == aState) && (src < srcEnd))
+  if((STATE_HALF_CODE_POINT == aState) && (src < srcEnd))
   {
     if(dest >= destEnd)
       goto error;
@@ -97,9 +106,9 @@ UTF16ConvertToUnicode(PRUint8& aState, PRUint8& aData, const char * aSrc,
   src +=copybytes;
   dest +=(copybytes/2);
   if(srcEnd == src)  { // srcLength was even.
-     aState = 0;
+     aState = STATE_NORMAL;
   } else if(1 == (srcEnd - src) ) { // srcLength was odd. 
-     aState = 1;
+     aState = STATE_HALF_CODE_POINT;
      aData  = *src++;  // store the lead byte of a 16-bit unit for the next run.
   } else  {
      goto error;
@@ -125,7 +134,7 @@ SwapBytes(PRUnichar *aDest, PRInt32 aLen)
 NS_IMETHODIMP
 nsUTF16ToUnicodeBase::Reset()
 {
-  mState = 2;
+  mState = STATE_FIRST_CALL;
   mData = 0;
   return NS_OK;
 }
@@ -135,7 +144,7 @@ nsUTF16ToUnicodeBase::GetMaxLength(const char * aSrc, PRInt32 aSrcLength,
                                    PRInt32 * aDestLength)
 {
   // the left-over byte of the previous run has to be taken into account.
-  *aDestLength = (aSrcLength + ((1 == mState) ? 1 : 0)) / 2;
+  *aDestLength = (aSrcLength + ((STATE_HALF_CODE_POINT == mState) ? 1 : 0)) / 2;
   return NS_OK;
 }
 
@@ -147,19 +156,18 @@ nsUTF16BEToUnicode::Convert(const char * aSrc, PRInt32 * aSrcLength,
 #ifdef IS_LITTLE_ENDIAN
     // Remove the BOM if we're little-endian. The 'same endian' case with the
     // leading BOM will be taken care of by |UTF16ConvertToUnicode|.
-    if(2 == mState) // Called for the first time.
+    if(STATE_FIRST_CALL == mState) // Called for the first time.
     {
+      mState = STATE_NORMAL;
       NS_ASSERTION(*aSrcLength >= 2, "Too few bytes in input");
       if(0xFFFE == *((PRUnichar*)aSrc)) {
         // eliminate BOM (on LE machines, BE BOM is 0xFFFE)
-        aSrc+=2;
-        *aSrcLength-=2;
+        mState = STATE_FOUND_BOM;
       } else if(0xFEFF == *((PRUnichar*)aSrc)) {
         *aSrcLength=0;
         *aDestLength=0;
         return NS_ERROR_ILLEGAL_INPUT;
-      }  
-      mState=0;
+      }
     }
 #endif
 
@@ -179,19 +187,18 @@ nsUTF16LEToUnicode::Convert(const char * aSrc, PRInt32 * aSrcLength,
 #ifdef IS_BIG_ENDIAN
     // Remove the BOM if we're big-endian. The 'same endian' case with the
     // leading BOM will be taken care of by |UTF16ConvertToUnicode|.
-    if(2 == mState) // first time called
+    if(STATE_FIRST_CALL == mState) // first time called
     {
+      mState = STATE_NORMAL;
       NS_ASSERTION(*aSrcLength >= 2, "Too few bytes in input");
       if(0xFFFE == *((PRUnichar*)aSrc)) {
         // eliminate BOM (on BE machines, LE BOM is 0xFFFE)
-        aSrc+=2;
-        *aSrcLength-=2;
+        mState = STATE_FOUND_BOM;
       } else if(0xFEFF == *((PRUnichar*)aSrc)) {
         *aSrcLength=0;
         *aDestLength=0;
         return NS_ERROR_ILLEGAL_INPUT;
-      }  
-      mState=0;
+      }
     }
 #endif
     
@@ -216,23 +223,20 @@ NS_IMETHODIMP
 nsUTF16ToUnicode::Convert(const char * aSrc, PRInt32 * aSrcLength,
                           PRUnichar * aDest, PRInt32 * aDestLength)
 {
-    if(2 == mState) // first time called
+    if(STATE_FIRST_CALL == mState) // first time called
     {
+      mState = STATE_NORMAL;
       NS_ASSERTION(*aSrcLength >= 2, "Too few bytes in input");
 
       // check if BOM (0xFEFF) is at the beginning, remove it if found, and
       // set mEndian accordingly.
       if(0xFF == PRUint8(aSrc[0]) && 0xFE == PRUint8(aSrc[1])) {
-        aSrc += 2;
-        *aSrcLength -= 2;
-        mState = 0;
+        mState = STATE_FOUND_BOM;
         mEndian = kLittleEndian;
         mFoundBOM = PR_TRUE;
       }
       else if(0xFE == PRUint8(aSrc[0]) && 0xFF == PRUint8(aSrc[1])) {
-        aSrc += 2;
-        *aSrcLength -= 2;
-        mState = 0;
+        mState = STATE_FOUND_BOM;
         mEndian = kBigEndian;
         mFoundBOM = PR_TRUE;
       }
@@ -240,18 +244,15 @@ nsUTF16ToUnicode::Convert(const char * aSrc, PRInt32 * aSrcLength,
       // the endianness. Assume the first character is [U+0001, U+00FF].
       // Not always valid, but it's very likely to hold for html/xml/css. 
       else if(!aSrc[0] && aSrc[1]) {  // 0x00 0xhh (hh != 00)
-        mState = 0;                   
         mEndian = kBigEndian;
       }
       else if(aSrc[0] && !aSrc[1]) {  // 0xhh 0x00 (hh != 00)
-        mState = 0;
         mEndian = kLittleEndian;
       }
       else { // Neither BOM nor 'plausible' byte patterns at the beginning.
              // Just assume it's BE (following Unicode standard)
              // and let the garbage show up in the browser. (security concern?)
              // (bug 246194)
-        mState = 0;   
         mEndian = kBigEndian;
       }
     }
